# bob.pad.face

./: .gitignore  .gitlab-ci.yml  MANIFEST.in  README.md  README.rst  bootstrap-buildout.py  buildout.cfg  develop.cfg  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  version.txt
bob/pad/face/: __init__.py  deep_pix_bis.py
bob/pad/face/algorithm/: VideoCascadeSvmPadAlgorithm.py  VideoGmmPadAlgorithm.py  VideoLRPadAlgorithm.py  VideoSvmPadAlgorithm.py  __init__.py
bob/pad/face/config/: aggregated_db.py  batl_db.py  batl_db_depth.py  batl_db_infrared.py  batl_db_thermal.py  brsu.py  casia_surf.py  casiafasd.py  casiasurf.py  casiasurf_color.py  celeb_a.py  deep_pix_bis.py  frame_diff_one_class_svm.py  frame_diff_svm.py  frame_diff_svm_aggregated_db.py  grid.py  hqwmca.py  lbp_64.py  lbp_lr_batl_D_T_IR.py  lbp_svm.py  lbp_svm_aggregated_db.py  mask_attack.py  maskattack.py  mifs.py  msu_mfsd.py  oulu_npu.py  oulunpu.py  qm_64.py  qm_lr.py  qm_lr_aggregated_db.py  qm_one_class_gmm.py  qm_one_class_svm_aggregated_db.py  qm_one_class_svm_cascade_aggregated_db.py  qm_svm.py  qm_svm_aggregated_db.py  replay_attack.py  replay_mobile.py  svm_frames.py  swan.py
bob/pad/face/config/algorithm/: video_cascade_svm_pad_algorithm.py  video_gmm_pad_algorithm.py  video_svm_pad_algorithm.py
bob/pad/face/config/batl_aggregated_configs/databases/: batl_aggregated_db_color_nomakeup.py  batl_aggregated_db_depth_nomakeup.py  batl_aggregated_db_infrared_nomakeup.py  batl_aggregated_db_thermal_nomakeup.py
bob/pad/face/config/batl_configs/databases/: batl_db_color_nomakeup.py  batl_db_depth_nomakeup.py  batl_db_infrared_nomakeup.py  batl_db_thermal_nomakeup.py
bob/pad/face/config/batl_docker_configs/: lbp_svm_batl_D_T_IR.py
bob/pad/face/config/batl_docker_configs/databases/: batl_docker_db_color.py  batl_docker_db_color_aggregated.py  batl_docker_db_depth.py  batl_docker_db_depth_aggregated.py  batl_docker_db_infrared.py  batl_docker_db_infrared_aggregated.py  batl_docker_db_thermal.py  batl_docker_db_thermal_aggregated.py  data_config.json  gt_config.py
bob/pad/face/config/batl_govt_configs/databases/: batl_govt_db_color_nomakeup.py  batl_govt_db_depth_nomakeup.py  batl_govt_db_infrared_nomakeup.py  batl_govt_db_thermal_nomakeup.py
bob/pad/face/config/database/: aggregated_db.py  celeb_a.py  mifs.py  msu_mfsd.py  replay.py  replay_attack.py  replay_mobile.py
bob/pad/face/config/database/batl/: batl_db_infrared.py  batl_db_rgb_ir_d_grandtest.py
bob/pad/face/config/extractor/: batch_autoencoder.py  frame_diff_features.py  optical_flow.py  video_hist_of_sparse_codes.py  video_lbp_histogram.py  video_quality_measure.py
bob/pad/face/config/preprocessor/: face_feature_crop_quality_check.py  filename.py  frame_difference.py  optical_flow.py  video_face_crop.py  video_face_crop_align_block_patch.py  video_sparse_coding.py
bob/pad/face/config/preprocessor/dictionaries/: dictionary_front_10_5_128.hdf5  dictionary_hor_10_5_128.hdf5  dictionary_vert_10_5_128.hdf5
bob/pad/face/config/pytorch/autoencoder/: autoencoder_config.py  autoencoder_config_celeba.py  autoencoder_config_v2.py  autoencoder_model.pth  autoencoder_model_v2.pth
bob/pad/face/config/quality_assessment/celeb_a/: quality_assessment_config.py  (+1 more)
bob/pad/face/config/vanilla_pad/: qm_svm.py  replay_attack.py
bob/pad/face/database/: __init__.py  aggregated_db.py  batl.py  batl_aggregated.py  batldocker.py  batlgovt.py  brsu.py  casia_fasd.py  casia_surf.py  casiafasd.py  casiasurf.py  celeb_a.py  database.py  hqwmca.py  hqwmca_warp.py  mask_attack.py  maskattack.py  mifs.py  msu_mfsd.py  old.py  oulunpu.py  replay.py  replay_attack.py  replay_csv.py  replay_mobile.py  swan.py
bob/pad/face/database/pytorch/: __init__.py  data_folder.py
bob/pad/face/extractor/: BatchAutoencoder.py  Chrom.py  FFTFeatures.py  FrameDiffFeatures.py  FreqFeatures.py  FrequencySpectrum.py  ImageQualityMeasure.py  LBPHistogram.py  LTSS.py  Li.py  LiFeatures.py  LiSpectralFeatures.py  NormalizeLength.py  OpticalFlow.py  PPGSecure.py  SSR.py  VideoDataLoader.py  VideoHistOfSparseCodes.py  VideoLBPHistogram.py  VideoQualityMeasure.py  __init__.py  conv_autoencoder118.pth  conv_autoencoder119.pth
bob/pad/face/lists/batl/: idiap_converter_v2.json
bob/pad/face/preprocessor/: BlockPatch.py  Chrom.py  CopyVideo.py  FaceCropAlign.py  FrameDifference.py  ImageFaceCrop.py  Li.py  LiICPR2016.py  LiPulseExtraction.py  PPGSecure.py  Patch.py  SSR.py  VideoFaceCrop.py  VideoFaceCropAlignBlockPatch.py  VideoSparseCoding.py  __init__.py
bob/pad/face/qualitymeasure/: filters.py  galbally_iqm_features.py  msu_iqa_features.py  tan_specular_highlights.py
bob/pad/face/script/: quality_assessment.py  statistics.py
bob/pad/face/scripts/pytorch/: pytorch_train.py
bob/pad/face/test/: test.py  test_block.py  test_databases.py  test_deep_pix_bis.py  test_qualitymeasure.py  test_transformers.py  test_utils.py
bob/pad/face/test/data/: lbp.hdf5  real_client001_android_SD_scene01.face  real_client001_android_SD_scene01_ref_feats.h5
bob/pad/face/test/dummy/: database.py
bob/pad/face/transformer/: VideoToFrames.py  __init__.py
bob/pad/face/utils/: __init__.py  face_detection_utils.py  load_utils.py  patch_utils.py
conda/: meta.yaml
doc/: api.rst  baselines.rst  catalog.json  conf.py  extra-intersphinx.txt  guide.rst  index.rst  installation.rst  links.rst  mc_autoencoder_pad.rst  other_pad_algorithms.rst  pulse.rst  py_api.rst  references.rst  resources.rst
src/bob/pad/face/: __init__.py  deep_pix_bis.py
src/bob/pad/face/config/: deep_pix_bis.py  lbp_svm.py
src/bob/pad/face/database/: __init__.py  atnt.py  casia_fasd.py  casia_surf.py  database.py  mask_attack.py  oulu_npu.py  replay_attack.py  replay_mobile.py  swan.py
src/bob/pad/face/preprocessor/: Patch.py
src/bob/pad/face/script/: statistics.py
src/bob/pad/face/transformer/: VideoToFrames.py  histogram.py
src/bob/pad/face/utils/: __init__.py  load_utils.py
tests/: test_deep_pix_bis.py  test_transformers.py  test_utils.py
tests/dummy/: database.py
(+427 files in other folders)
